# utils

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: test-unix.yaml  test-windows.yaml  test.yaml
docs/: README.md  _sidebar.md  example-usage.md  index.html  package-lock.json  package.json  theme.config.jsx
docs/_media/: fonts.css
docs/agentic/: AGENTS.md
docs/agentic/modules/: code.md  column.astronomy.md  column.averaging_kernel.md  column.md  column.ncep_profiles.md  dataframes.md  datastructures.md  decorators.md  em27.md  files.md  mathematics.md  netcdf.md  opus.file_interface.md  opus.http_interface.md  opus.md  plotting.md  processes.md  rebinning.md  shell.md  sqlitelock.md  system.md  text.md  timing.md  validators.md
docs/api-reference/: context.md  datastructures.md  decorators.md  files.md  github.md  interferograms.md  logger.md  mathematics.md  processes.md  shell.md  system.md  testing.md  text.md  validators.md
docs/pages/: _meta.json  api-reference.md  example-usage.md  index.md
docs/scripts/: sync-docs.py
scripts/: check_static_types.sh  dummy_process_script.py  generate_docs.py  update_api_reference.sh
tests/: test_api_reference_state.py  test_code.py  test_column.py  test_context.py  test_dataframes.py  test_datastructures.py  test_decorators.py  test_docs.py  test_em27.py  test_files.py  test_interferograms.py  test_logger.py  test_merge_dicts.py  test_netcdf.py  test_opus.py  test_plotting.py  test_processes.py  test_rebinning.py  test_ring_list.py  test_shell.py  test_sqlitelock.py  test_static_types.py  test_text.py  test_timing.py  test_validators.py  test_with_filelock.py  test_with_section_duration.py
tests/data/: comb_invparms_ma_SN061_210329-210329.csv  ma20240514s0e00a.0975
tests/data/column/: .gitignore  2024010100_48N012E.map  2024010100_48N012E.mod  2024010100_48N012E.vmr  ma_avk_CO_2019.json
tests/data/ifgs/: md20220409s0e00a.0198  md20220409s0e00a.0198.json  md20220409s0e00a.0199  md20220409s0e00a.0200  so20170608.ifg.000  so20170608.ifg.050
tests/data/proffast/: comb_invparms_mc_SN115_220602-220602.csv
tests/manual/: evaluate_compression_ratios.py  test_compression_ratios.py
tests/repository/: test_docs.py  test_ruff_linting.py  test_static_types.py
tests/scripts/: dummy_process.py  dummy_process_with_grace.py
tests/unit/: test_column.py  test_datastructures.py  test_decorators.py  test_em27.py  test_files.py  test_netcdf.py  test_opus.py  test_processes.py  test_shell.py  test_sqlitelock.py  test_timing.py  test_validators.py
tum_esm_utils/: __init__.py  code.py  context.py  dataframes.py  datastructures.py  decorators.py  em27.py  files.py  github.py  interferograms.py  logger.py  logging.py  mathematics.py  netcdf.py  opus.py  plotting.py  processes.py  rebinning.py  shell.py  sqlitelock.py  string.py  system.py  testing.py  text.py  timing.py  validators.py
tum_esm_utils/column/: .gitignore  __init__.py  astronomy.py  averaging_kernel.py  ncep_profiles.py
tum_esm_utils/ifg_parser/: .gitignore  ifg_parser.F90  ifg_parser.template.inp
tum_esm_utils/opus/: __init__.py  file_interface.py  http_interface.py  types.py  utils.py
tum_esm_utils/opus_file_validator/: .gitignore  opus_file_validator.F90
