[project]
name = "tum_esm_utils"
version = "2.12.2"
description = "Python utilities by the Professorship of Environmental Sensing and Modeling at the Technical University of Munich"
authors = [
    { name = "Moritz Oliveira Makowski", email = "moritz.makowski@tum.de" },
    { name = "Friedrich Klappenbach", email = "friedrich.klappenbach@tum.de" },
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "tum",
    "utils",
    "utilities",
    "environmental",
    "sensing",
    "modeling",
    "python",
    "library",
    "pydoc-markdown",
]
dependencies = [
    "filelock>=3.18.0",
    "psutil>=7.1.2",
    "pydantic>=2.11.3",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "tailwind-colors>=1.3.0",
    "tomli>=2.4.1 ; python_full_version < '3.11'",
    "tomli-w>=1.2.0",
]

[project.urls]
repository = "https://github.com/tum-esm/utils"
documentation = "https://tum-esm-utils.netlify.app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pydocstyle>=6.3.0",
    "mypy>=1.15.0",
    "pydoc-markdown>=4.8.2",
    "types-psutil>=7.0.0.20251001",
    "types-requests>=2.32.0.20250328",
    "types-pytz>=2025.2.0.20250326",
    "ruff>=0.11.6",
    "pytest-order>=1.3.0",
    "scipy-stubs>=1.15.2.2",
    "pyright>=1.1.407",
]
plotting = ["matplotlib>=3.10.7", "numpy>=2.2.5"]
em27 = ["polars>=1.16.0"]
polars = ["polars>=1.16.0"] # alias for em27 (will be removed with 3.0)
opus = ["numpy>=2.2.5", "tenacity>=9.1.2"]
modeling = ["polars>=1.16.0", "scipy>=1.15.2", "skyfield>=1.53", "numpy>=2.2.6"]
netcdf = ["netcdf4>=1.7.3"]
all = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "polars>=1.16.0",
    "tenacity>=9.1.2",
    "scipy>=1.15.2",
    "skyfield>=1.53",
    "netcdf4>=1.7.3",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::pytest.PytestUnhandledThreadExceptionWarning", "ignore::UserWarning"]
markers = [
    "quick: tests that run very quickly",
    "multithreaded: tests that run on multiple threads",
]
addopts = "--exitfirst --verbose --durations=0 --no-header"

[tool.mypy]
strict = true
implicit_reexport = true
warn_unused_ignores = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["skyfield.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
lint.ignore = ["E712", "E731", "E722", "E741"]

[tool.pyright]
exclude = [".venv", "dist", "build"]
strict = ["tum_esm_utils", "tests"]

[build-system]
requires = ["uv_build>=0.11.17,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tum_esm_utils"
module-root = ""
source-exclude = [
    "tests",
    "tum_esm_utils/opus_file_validator/*.mod",
    "tum_esm_utils/opus_file_validator/*.lock",
    "tum_esm_utils/opus_file_validator/*.txt",
    "tum_esm_utils/opus_file_validator/opus_file_validator",
    "tum_esm_utils/column/de421.bsp",
]
